fix carousel icons on mobile

--- a/css/gallery/gallery-style.css
+++ b/css/gallery/gallery-style.css
@@ -130,8 +130,8 @@ body{
 
 @media screen and (max-width: 540px){
     .owl-item img{
-        max-width: 400px !important;
-        width: 100% !important;
+        max-width: 385px !important;
+        width: 90% !important;
         height: auto !important;
         margin: auto 0;
         max-height: 265px !important;
@@ -189,11 +189,11 @@ body{
 
 @media screen and (max-width: 820px){
     .owl-nav .owl-next{
-        right: -1rem;
+        right: -0.3rem;
     }
 
     .owl-nav .owl-prev{
-        left: -1rem;
+        left: -0.3rem;
     }
 }
 
